--- a/website/css/style.css
+++ b/website/css/style.css
@@ -205,7 +205,7 @@ form a{
 }
 
 .modal-body{
-	padding: 0 15px;
+	padding: 0 30px;
 	max-height: 350px;
 }
 .more-cat.modal-body{
@@ -215,10 +215,18 @@ form a{
 	border-top: 0px solid #e5e5e5;
 	padding-bottom: 40px;
 }
-.modal-body p {
+.more-cat.modal-body p {
     color: #1864af;
 }
-
+.modal-footer hr{
+    margin-top: 35px;
+    margin-bottom: 26px;
+    border: 0;
+    border-top: 2px solid #666666;
+}
+.modal-footer.lawyer {
+    text-align: left;
+}
 .read-close{float: right;}
 
 /*FOOTER*/
